Update index.html: fix layout and styles

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <h2>Sở thích</h2>
             <p>
               Tôi thích coding, nghe nhạc, chơi cờ vua, và đọc các tài liệu về
-              UX/UI hiện đại.(phét)
+              công nghệ.
             </p>
           </div>
         </section>
@@ -154,7 +154,7 @@
           <div>
             <h2>Chứng chỉ - Giải thưởng</h2>
             <ul>
-              <li>Tham gia ICPC 2025 - Đang luyện tập</li>
+              <li>Không có</li>
             </ul>
           </div>
         </section>
